--- a/setaudit.1
+++ b/setaudit.1
@@ -21,7 +21,7 @@
 .\" LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
-.Dd March 14, 2018
+.Dd March 18, 2018
 .Dt SETAUDIT 1
 .Os
 .Sh NAME
@@ -29,6 +29,7 @@
 .Nd "specify audit configurations on a process"
 .Sh SYNOPSIS
 .Nm
+.Op Fl 46
 .Op Fl a Ar auid
 .Op Fl m Ar mask
 .Op Fl s Ar source
@@ -40,6 +41,10 @@ is a tool to specify audit configurations on a process.
 .Pp
 The following options are available:
 .Bl -tag -width ".Fl d Ar argument"
+.It Fl 4
+Use IPv4.
+.It Fl 6
+Use IPv6.
 .It Fl a
 Audit user ID.
 .It Fl m
