Add missing arguments to options' descriptions

--- a/setaudit.1
+++ b/setaudit.1
@@ -45,13 +45,13 @@ The following options are available:
 Use IPv4.
 .It Fl 6
 Use IPv6.
-.It Fl a
+.It Fl a Ar auid
 Audit user ID.
-.It Fl m
+.It Fl m Ar mask
 String representation of an audit mask.
-.It Fl s
+.It Fl s Ar source
 IPv4 or IPv6 address of a Terminal ID.
-.It Fl p
+.It Fl p Ar port
 Port of a Terminal ID.
 .Xr
 .El
