Reference the setaudit system call

--- a/setaudit.8
+++ b/setaudit.8
@@ -63,6 +63,7 @@ and it's child processes:
 .Dl # setaudit -m ex command
 .Sh SEE ALSO
 .Xr getaudit 2 ,
+.Xr setaudit 2 ,
 .Xr au_mask 3 ,
 .Xr libbsm 3 ,
 .Xr audit_user 5 ,
