Fix a typo in the example
While here, update the copyright notice.

--- a/setaudit.8
+++ b/setaudit.8
@@ -1,5 +1,4 @@
-.\" Copyright (c) 2018 Mateusz Piotrowski <0mp@FreeBSD.org>
-.\" All rights reserved.
+.\" Copyright (c) 2018-2022 Mateusz Piotrowski <0mp@FreeBSD.org>
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -58,7 +57,7 @@ Port of a Terminal ID.
 .Sh EXAMPLES
 Enable all exe related audit events performed by
 .Ar command
-and it's child processes:
+and its child processes:
 .Pp
 .Dl # setaudit -m ex command
 .Sh SEE ALSO
